# backend/src/main/java/com/tribly/enums/AdType.java
@@ -1,0 +1,7 @@
+package com.tribly.enums;
+
+public enum AdType {
+  SALE,
+  RENTAL,
+  WANTED
+}
